--- a/theme/strawberry/mobile/shop/es.html
+++ b/theme/strawberry/mobile/shop/es.html
@@ -24,7 +24,7 @@
     <table border="0" cellspacing="0" cellpadding="0">
         <tr>
             <td id="escrow_img">
-                <img src="/theme/strawberry/mobile/shop/img/es_foot.png" width="272" height="77" border="0" usemap="#Map">
+                <img src="/theme/strawberry/mobile/shop/img/es_foot.png" width="272" height="77" border="0" usemap="#Map" alt="에스크로">
             </td>
         </tr>
     </table>
