--- a/theme/strawberry/mobile/shop/es.html
+++ b/theme/strawberry/mobile/shop/es.html
@@ -12,14 +12,14 @@
 
         document.shop_check.method = "post";
         document.shop_check.target = "kcp_pop";
-        document.shop_check.action = "https://admin.kcp.co.kr/Modules/escrow/kcp_pop.jsp";
+        document.shop_check.action = "https://admin.kcp.co.kr/Modules/escrow/kcp_pop.jsp?site_cd=SRAA7";
 
         document.shop_check.submit();
     }
 </script>
 </head>
 <body>
-<form name="shop_check" method="post" action="http://admin.kcp.co.kr/Modules/escrow/kcp_pop.jsp">
+<form name="shop_check" method="post" action="https://admin.kcp.co.kr/Modules/escrow/kcp_pop.jsp?site_cd=SRAA7">
     <input type="hidden" name="site_cd" value="SRAA7">
     <table border="0" cellspacing="0" cellpadding="0">
         <tr>
